--- a/rankings.html
+++ b/rankings.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/rankings.css">
-    <title>Gestión de Usuarios y Puntuaciones</title>
+    <title>Nasalmi - Rankings</title>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="https://picsum.photos/80/30" alt="Logo" class="logo">
+            <img src="Resources/logoNasalmi.png" alt="Logo" class="logo">
             <span class="navbar-brand mb-0 h1">Nasalmi</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -25,30 +26,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="game.html">Game</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="rankings.html">Rankings</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="achievements.html">Achievements</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="user.html">User Info</a>
+                    <a class="nav-link" id="userButton" style="display: none;"  href="user.html">User Info</a>
                 </li>
             </ul>
             <div class="navbar-nav">
-                <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
-                <a class="nav-link" href="#"><i class="fas fa-globe"></i></a>
-                <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal"><i
+                <a class="nav-link" href="#" id="loginButton" data-toggle="modal" data-target="#loginModal"><i
                         class="fas fa-user"></i></a>
                 <a class="nav-link" href="#" id="logoutButton" style="display: none;"><i
                         class="fas fa-sign-out-alt"></i></a>
-                <button class="btn btn-warning my-2 my-sm-0" type="submit">Download</button>
+                        <button class="btn btn-warning my-2 my-sm-0" type="submit" data-toggle="modal" data-target="#downloadModal">Download</button>
             </div>
         </div>
     </nav>
@@ -59,38 +58,38 @@
             <div class="col-md-6">
                 <div class="ranking-header bg-dark text-white text-center p-3 my-3">
                     <div class="d-flex justify-content-between">
-                        <select class="custom-select mr-2">
-                            <option selected>Mode</option>
-                            <!-- Primer ComboBox -->
+                        <select id="rankUsers" class="custom-select mr-2">
+                            <option value="0" selected disabled>Rank Users by</option>
+                            <option value="1">Score</option>
+                            <option value="2">Flys killed</option>
+                            <option value="3">Meat killed</option>
+                            <option value="4">Worms killed</option>
+                            <option value="5">Humans killed</option>
+                            <option value="6">Vis killed</option>
                         </select>
-                        <select class="custom-select">
-                            <option selected>Chapter</option>
-                            <!-- Segundo ComboBox -->
+                        <select id="rankGames" class="custom-select">
+                            <option value="0" selected disabled>Rank Games by</option>
+                            <option value="1">Score</option>
+                            <option value="2">Gold obtained</option>
+                            <option value="3">Hearts gained</option>
+                            <option value="4">Time</option>
                         </select>
                     </div>
                     <div class="input-group my-3">
-                        <input type="text" class="form-control" placeholder="Search Display Name">
+                        <input type="text" class="buscador form-control" placeholder="Search Display Name">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button">
+                            <button class="buscadorbtn btn btn-outline-secondary" type="button">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
                     </div>
-                    <div class="alert alert-secondary text-center" role="alert">
+                    <div id="signInAlert" class="alert alert-secondary text-center" role="alert">
                         Sign in to see your rank
-                        <button class="btn btn-light btn-sm ml-2">SIGN IN</button>
+                        <button class="btn btn-light btn-sm ml-2" data-toggle="modal" data-target="#loginModal">SIGN IN</button>
                     </div>
                 </div>
                 <div class="list-group">
-                    <a href="#"
-                        class="list-group-item list-group-item-action bg-secondary text-white d-flex justify-content-between align-items-center">
-                        <div class="left-side d-flex align-items-center">
-                            <h5 class="mb-0">1</h5>
-                            <img src="https://picsum.photos/40/40" alt="Logo" class="img-fluid rounded-circle mr-2">
-                            <h5 class="mb-0">GH 9 ALI</h5>
-                        </div>
-                        <small class="score">1234</small>
-                    </a>
+                    
                     <a href="#"
                         class="list-group-item list-group-item-action bg-secondary text-white d-flex justify-content-between align-items-center">
                         <div class="left-side d-flex align-items-center">
@@ -177,11 +176,11 @@
                 <div class="modal-body">
                     <div class="login-container">
                         <div class="login-form bg-dark text-white p-4">
-                            <h3 class="text-center mb-4">Sign in to your Epic Games Account</h3>
+                            <h3 class="text-center mb-4">Sign in to your Nasalmi Account</h3>
                             <form>
                                 <div class="form-group">
-                                    <label for="email">Email Address</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                    <label for="email">User Name</label>
+                                    <input class="form-control" id="email" placeholder="Enter User Name">
                                 </div>
                                 <div class="form-group">
                                     <label for="password">Password</label>
@@ -207,29 +206,25 @@
                 <div class="modal-body">
                     <div class="register-container">
                         <div class="register-form bg-dark text-white p-4">
-                            <h3 class="text-center mb-4">Create your Epic Games Account</h3>
+                            <h3 class="text-center mb-4">Create your Nasalmi Account</h3>
                             <form>
-                                <div class="form-group">
-                                    <label for="registerEmail">Email Address</label>
-                                    <input type="email" class="form-control" id="registerEmail"
-                                        placeholder="Enter email">
+                                <div class="form-group d-flex align-items-center">
+                                    <input type="email" class="form-control" id="registerEmail" placeholder="Enter email">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="form-group d-none" id="usernameGroup">
-                                    <label for="username">Username</label>
-                                    <input type="text" class="form-control" id="username"
-                                        placeholder="Choose a username">
+                                <div class="form-group d-none d-flex align-items-center" id="usernameGroup">
+                                    <input type="text" class="form-control" id="username" placeholder="Choose a username">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="form-group d-none" id="passwordGroup">
-                                    <label for="registerPassword">Password</label>
-                                    <input type="password" class="form-control" id="registerPassword"
-                                        placeholder="Enter password">
+                                <div class="form-group d-none d-flex align-items-center" id="passwordGroup">
+                                    <input type="password" class="form-control" id="registerPassword" placeholder="Enter password">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="form-group d-none" id="confirmPasswordGroup">
-                                    <label for="confirmPassword">Confirm Password</label>
-                                    <input type="password" class="form-control" id="confirmPassword"
-                                        placeholder="Confirm your password">
+                                <div class="form-group d-none d-flex align-items-center" id="confirmPasswordGroup">
+                                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="text-center">
+                                <div id="btnRegister" class="text-center d-none">
                                     <button type="submit" class="btn btn-primary">REGISTER</button>
                                     <p class="mt-3"><a href="#" class="text-white-50" data-toggle="modal"
                                             data-target="#loginModal" data-dismiss="modal">Back to Sign In</a></p>
@@ -241,13 +236,70 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="downloadModal" tabindex="-1" aria-labelledby="downloadModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-dark text-white">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="downloadModalLabel">Download Game</h5>
+                    <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="download-container">
+                        <table class="table table-dark table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Component</th>
+                                    <th scope="col">Requirement</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Operating System</td>
+                                    <td>Windows XP, Vista, 7</td>
+                                </tr>
+                                <tr>
+                                    <td>Processor</td>
+                                    <td>2.5 GHz</td>
+                                </tr>
+                                <tr>
+                                    <td>Memory</td>
+                                    <td>1 GB RAM</td>
+                                </tr>
+                                <tr>
+                                    <td>Hard Drive Space</td>
+                                    <td>50 MB</td>
+                                </tr>
+                                <tr>
+                                    <td>Graphics Card</td>
+                                    <td>DirectX9.0c Compatible Card (Shader Model 2.0)</td>
+                                </tr>
+                                <tr>
+                                    <td>DirectX®</td>
+                                    <td>9.0c</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-primary"><a class="btn btn-primary" href="uploads/Nasalmi.rar">DOWNLOAD</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.2/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+
     <script src="js/rankings.js"></script>
+    <script src="js/common.js"></script>
 </body>
 
 </html>
