--- a/achievements.html
+++ b/achievements.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/achievements.css">
-    <title>Gestión de Usuarios y Puntuaciones</title>
+    <title>Nasalmi - Achievements</title>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
-            <img src="https://picsum.photos/80/30" alt="Logo" class="logo">
+            <img src="Resources/logoNasalmi.png" alt="Logo" class="logo">
             <span class="navbar-brand mb-0 h1">Nasalmi</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -25,7 +26,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
@@ -34,21 +35,19 @@
                 <li class="nav-item">
                     <a class="nav-link" href="rankings.html">Rankings</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="achievements.html">Achievements</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="user.html">User Info</a>
+                    <a class="nav-link" id="userButton" style="display: none;"  href="user.html">User Info</a>
                 </li>
             </ul>
             <div class="navbar-nav">
-                <a class="nav-link" href="#"><i class="fas fa-search"></i></a>
-                <a class="nav-link" href="#"><i class="fas fa-globe"></i></a>
-                <a class="nav-link" href="#" data-toggle="modal" data-target="#loginModal"><i
+                <a class="nav-link" href="#" id="loginButton" data-toggle="modal" data-target="#loginModal"><i
                         class="fas fa-user"></i></a>
                 <a class="nav-link" href="#" id="logoutButton" style="display: none;"><i
                         class="fas fa-sign-out-alt"></i></a>
-                <button class="btn btn-warning my-2 my-sm-0" type="submit">Download</button>
+                        <button class="btn btn-warning my-2 my-sm-0" type="submit" data-toggle="modal" data-target="#downloadModal">Download</button>
             </div>
         </div>
     </nav>
@@ -58,13 +57,14 @@
         <div class="row">
             <div class="col">
                 <h1 class="title-line text-primary">Achievements</h1>
-                <p class="text-white-50">14 Achievements</p>
+                <p class="text-white-50 textoAchievements">14 Achievements</p>
             </div>
             <div class="col text-right">
-                <select class="custom-select style-select">
-                    <option selected>Types of Achievements</option>
-                    <option value="1">Single Run Only</option>
-                    <option value="2">Cumulative</option>
+                <select class="tipoLogro custom-select style-select">
+                    <option value="0" selected>Achievement Order</option>
+                    <option value="1">Points</option>
+                    <option value="2">Obtained</option>
+                    <option value="3">Name</option>
                 </select>
             </div>
         </div>
@@ -72,14 +72,14 @@
             <table class="table table-dark table-striped">
                 <thead>
                     <tr>
-                        <th scope="col">Icono</th>
-                        <th scope="col">Título</th>
-                        <th scope="col">Descripción</th>
-                        <th scope="col">Puntos</th>
-                        <th scope="col">% Completado</th>
+                        <th scope="col">Icon</th>
+                        <th scope="col">Títle</th>
+                        <th scope="col">Description</th>
+                        <th scope="col">Points</th>
+                        <th scope="col">Num Users</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody class="logros">
                     <tr>
                         <td><img src="https://picsum.photos/40/40" alt="Logro" class="achievement-icon"></td>
                         <td>Título del Logro</td>
@@ -198,11 +198,11 @@
                 <div class="modal-body">
                     <div class="login-container">
                         <div class="login-form bg-dark text-white p-4">
-                            <h3 class="text-center mb-4">Sign in to your Epic Games Account</h3>
+                            <h3 class="text-center mb-4">Sign in to your Nasalmi Account</h3>
                             <form>
                                 <div class="form-group">
-                                    <label for="email">Email Address</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                    <label for="email">User Name</label>
+                                    <input class="form-control" id="email" placeholder="Enter User Name">
                                 </div>
                                 <div class="form-group">
                                     <label for="password">Password</label>
@@ -228,29 +228,25 @@
                 <div class="modal-body">
                     <div class="register-container">
                         <div class="register-form bg-dark text-white p-4">
-                            <h3 class="text-center mb-4">Create your Epic Games Account</h3>
+                            <h3 class="text-center mb-4">Create your Nasalmi Account</h3>
                             <form>
-                                <div class="form-group">
-                                    <label for="registerEmail">Email Address</label>
-                                    <input type="email" class="form-control" id="registerEmail"
-                                        placeholder="Enter email">
+                                <div class="form-group d-flex align-items-center">
+                                    <input type="email" class="form-control" id="registerEmail" placeholder="Enter email">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="form-group d-none" id="usernameGroup">
-                                    <label for="username">Username</label>
-                                    <input type="text" class="form-control" id="username"
-                                        placeholder="Choose a username">
+                                <div class="form-group d-none d-flex align-items-center" id="usernameGroup">
+                                    <input type="text" class="form-control" id="username" placeholder="Choose a username">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="form-group d-none" id="passwordGroup">
-                                    <label for="registerPassword">Password</label>
-                                    <input type="password" class="form-control" id="registerPassword"
-                                        placeholder="Enter password">
+                                <div class="form-group d-none d-flex align-items-center" id="passwordGroup">
+                                    <input type="password" class="form-control" id="registerPassword" placeholder="Enter password">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="form-group d-none" id="confirmPasswordGroup">
-                                    <label for="confirmPassword">Confirm Password</label>
-                                    <input type="password" class="form-control" id="confirmPassword"
-                                        placeholder="Confirm your password">
+                                <div class="form-group d-none d-flex align-items-center" id="confirmPasswordGroup">
+                                    <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm your password">
+                                    <span class="material-icons ml-2" style="cursor: pointer;">keyboard_return</span>
                                 </div>
-                                <div class="text-center">
+                                <div id="btnRegister" class="text-center d-none">
                                     <button type="submit" class="btn btn-primary">REGISTER</button>
                                     <p class="mt-3"><a href="#" class="text-white-50" data-toggle="modal"
                                             data-target="#loginModal" data-dismiss="modal">Back to Sign In</a></p>
@@ -262,13 +258,71 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="downloadModal" tabindex="-1" aria-labelledby="downloadModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-dark text-white">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="downloadModalLabel">Download Game</h5>
+                    <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="download-container">
+                        <table class="table table-dark table-striped">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Component</th>
+                                    <th scope="col">Requirement</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Operating System</td>
+                                    <td>Windows XP, Vista, 7</td>
+                                </tr>
+                                <tr>
+                                    <td>Processor</td>
+                                    <td>2.5 GHz</td>
+                                </tr>
+                                <tr>
+                                    <td>Memory</td>
+                                    <td>1 GB RAM</td>
+                                </tr>
+                                <tr>
+                                    <td>Hard Drive Space</td>
+                                    <td>50 MB</td>
+                                </tr>
+                                <tr>
+                                    <td>Graphics Card</td>
+                                    <td>DirectX9.0c Compatible Card (Shader Model 2.0)</td>
+                                </tr>
+                                <tr>
+                                    <td>DirectX®</td>
+                                    <td>9.0c</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-primary"><a class="btn btn-primary" href="uploads/Nasalmi.rar">DOWNLOAD</a></button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.2/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <script src="js/achievements.js"></script>
+    <script src="js/common.js"></script>
 </body>
 
 </html>
